--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,8 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
         </head>
         <body>
-            <a href="{{url_for('contacts')}}">Контакты</a>
+            <a href="{{url_for('users')}}">Пользователи</a>
+            <a href="{{url_for('contacts')}}">Контакты</a>            
             <h1 class="text-primary">Главная страница</h1>
             <div>
                 <table class="table">
